--- a/projects/calculator.html
+++ b/projects/calculator.html
@@ -81,13 +81,17 @@
             <main class="main-section">
                 <section class="calculator">
                     <h2 id="calc-anchor"><a href="../../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <article class="calc-input-section">
+                    
+                    <div class="calc-input-section">
                         <h3>Enter a number</h3>
+
                         <input class="calc-num-input" type="text">
+
                         <div class="calc-notice-section">
                             <p id="calc-notice"></p>
                         </div>
-                    </article>
+
+                    </div>
 
                     <div class="calc-buttons-section">
                         <button class="btn-calc" id="btn-result-all">Result all</button>
@@ -100,7 +104,7 @@
                         <button class="btn-calc" id="btn-circle-length">Circle length</button>
                     </div>
 
-                    <article class="calc-result-section">
+                    <div class="calc-result-section">
                         <h3>Result</h3>
 
                         <img id="img-sqr">
@@ -115,7 +119,9 @@
                         <p id="p-sqr-cubic-root"></p><br>
                         <img id="img-circle-length">
                         <p id="p-circle-length"></p>
-                    </article>
+
+                    </div>
+
                     <script src="../../ivan-qa/scripts/calculator.js"></script>
 
                 </section>
