--- a/projects/test-plan.html
+++ b/projects/test-plan.html
@@ -76,12 +76,11 @@
         <div class="main-wrapper">
             <!--main-section-->
             <main class="main-section">
-                <section class="main-section-item">
-                    <div class="meta">
+                <!--main-section-item-->
+                <div class="main-section-item">
                         <h3>Test Plan</h3>
-                    </div>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="test_plan_definition">Test Plan Definition</h4>
                         <p>By ISTQB glossary the definition of a test strategy is – a document describing the scope,
                             approach, resources and
@@ -100,9 +99,9 @@
                             mitigate those risks, rather than ticking boxes to show that all types of testing have been
                             included.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="test_planning_at_sdlc_phases">Test Planning At SDLC Phases</h4>
                         <p><b>Initiate</b></p>
                         <p>QA team should get involved while the scope of the project is gathered from the
@@ -127,9 +126,9 @@
                         second version of the
                         Test plan is created incorporating all this information.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="components_of_a_plan_document">Components Of A Plan Document</h4>
                         <p><b>Scope</b></p>
                         <p>
@@ -198,9 +197,9 @@
                         <p>When to stop testing?
                         </p>
 
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="test_planning">Test Planning</h4>
                         <p>Planning a test is the core important section in the testing cycle. The outcome of the
                             testing phase will be
@@ -245,9 +244,9 @@
                             with the developers for them to fix.</p>
                         <p><b>Risks and Contingencies: </b>Risks associated during the testing should be clearly
                             mentioned and proper contingencies during the time have to be defined very clearly.</p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="test_execution_plan">Test Execution Plan</h4>
                         <p>The execution of test cases is one of the steps in the STLC phase. This will have to be
                             performed in accordance with the plans that were worked out earlier. Hence, planning always
@@ -277,9 +276,9 @@
                             tools can really help a lot in bringing down the metrics for supporting the testing
                             deliverables.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="test_plan_&_test_execution_comparison">Test Plan & Test Execution Comparison</h4>
                         <table>
                             <tr>
@@ -357,9 +356,9 @@
                                 <td>This will impact the subsequent cycle or release to be tested.</td>
                             </tr>
                         </table>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="how_to_write_a_test_plan">How to write a Test Plan</h4>
                         <p>You already know that making a Test Plan is the most important task of Test Management
                             Process. Follow the seven
@@ -668,18 +667,18 @@
                             <li>Release notes</li>
                         </ul>
 
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="conclusion">Conclusion</h4>
                         <p>We realize why software testing and planning are important for the optimal project workflow
                             and how we can execute these plans efficiently. In this article, we discussed the test plan
                             for software testing. We first discussed its definition, objectives, advantages, the method
                             to implement it, and creating a template for it.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="links_used">Links used</h4>
                         <ol>
                             <li><a href="https://istqb-glossary.page/test-plan/">ISTQB Glossary - Test Plan<i
@@ -693,9 +692,9 @@
                                     is a Test Plan in
                                     Software Testing?<i class="fa fa-external-link" aria-hidden="true"></i></a></li>
                         </ol>
-                    </article>
+                    </section>
 
-                </section>
+                </div>
 
             </main>
 
