--- a/projects/bug-report.html
+++ b/projects/bug-report.html
@@ -76,24 +76,22 @@
         <div class="main-wrapper">
             <!--main-section-->
             <main class="main-section">
-                <section class="main-section-item">
-                    <div class="meta">
-                        <h3>Bug Report</h3>
-                    </div>
+                <div class="main-section-item">
+                    <h3>Bug Report</h3>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="test_case_definition">Bug Report Definition</h4>
                         <p>By ISTQB glossary the definition of a bug report is a document reporting on any flaw in a component or system that can cause the component or system to fail to perform its required function.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="why_do_we_need_a_bug_report">Why Do We Need A Bug Report?</h4>
                         <p>Bug Report is an important document in STLC that offers various advantages to the testing team. It keeps track of all the defects, multiple bugs, errors, and other discrepancies found during software testing and reports them.</p>
                         <p>The purpose of this post-testing documentation is to provide information to the concerned team of professionals about the level of bugs encountered during the testing process.</p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="how_to_write_bug_report">How to Write Bug Report</h4>
                         <p>There is no exact bug report template, as it depends upon your bug-tracking system. Your template might be different.</p>
                         <p>However, the following common fields are always needed when you want to write a bug report:</p>
@@ -200,9 +198,9 @@
                         <h5>14. Status:</h5>
                         <p>When a new bug is created, its status should be open. After that, it goes through stages like In Progress, Fixed, Running, Reopen, etc.</p>
 
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="example_of_bug_report">Example of Bug Report</h4>
                         <p>Here is a small example of a bug report:</p>
                         <p>[MY ACCOUNT] Underline is displayed when mouseovering on the Update button.</p>
@@ -220,149 +218,17 @@
                         <p><b>Expected Result: </b>no underline.</p>
                         <p><b>Login Data: </b>test@test.com / mysecretpass12</p>
 
-                    </article>
+                    </section>
 
-                    <article class="article-section">
-                        <h4 id="my_bug_examples_by_type">My Bug Examples by Type</h4>
-                        <h5>Crash</h5>
-                        <p><b>Title: </b>[Windows 11] MP - Connecting to server leads to an error that can't be closed</p>
-                        <p><b>Bug Severity: </b>Blocker</p>
-                        <p><b>Bug Priority: </b>High</p>
-                        <p><b>Action Performed: </b></p>
-                        <ol>
-                            <li>Launch the application and login</li>
-                            <li>Click on Start Playing tab</li>
-                            <li>Find any multiplayer project in gallery and select it</li>
-                            <li>Click "Play" button</li>
-                        </ol>
-                        <p><b>Expected Result: </b>The selected multiplayer project should load successfully.</p>
-                        <p><b>Actual Result: </b>The selected multiplayer project wasn't loaded.<br> 
-                            The window with an error can't be closed and leaded to the "hang" of the application.<br>
-                            User should force close the app to exit.</p>
-                        <p><b>Error Message: </b>Connection to MP Collectible 3, versionID:
-                            35937894-1bee-4aa4-bc99-a6780c00aced failed.</p>
-                        <p><b>Additional Enviroment Info: </b><br><br>
-                            Screen resolution: 1920x1080<br>
-                            In app resolution: 1920x1080<br>
-                            Windows zoom: 100%
-                        </p>
-                        <p><b>Device Model: </b>Lenovo Legion 5 (2021)</p>
-                        <p><b>Device Software Version: </b> Windows 11 22H2</p>
-                        <p><b>Attachments: </b><br><br>
-                            <a href="../images/articles/bug-report-crash.png"><img src="../images/articles/bug-report-crash.png" class="bug-type-img" alt="Crash type bug"></a><br>
-                            <i>*some information is blurred due to NDA</i>  
-                        </p>
-
-                        <h5>Performance</h5>
-                        <p><b>Title: </b>[Windows 11/Chrome] On Demand - Long video keeps buffering in first minutes of playing</p>
-                        <p><b>Bug Severity: </b>Major</p>
-                        <p><b>Bug Priority: </b>Medium</p>
-                        <p><b>Action Performed: </b></p>
-                        <ol>
-                            <li>Go to URL *url-is-here*</li>
-                            <li>Click on "Sports" tab</li>
-                            <li>Select "Baseball" and click on any game (eg."Game 2 MEAC Baseball: Norfolk vs MESU (~3h game))</li>
-                            <li>Watch first minute of the video</li>
-                        </ol>
-                        <p><b>Expected Result: </b>No issues to start streaming and for the first minutes of video paying.</p>
-                        <p><b>Actual Result: </b>Long video keeps buffering in the first minutes of the playing.</p> 
-                        <p><b>Error Message: </b>No</p>
-                        <p><b>Additional Enviroment Info: </b><br><br>
-                            1st game from Baseball tab also buffering. Seems to me it is general problem with long videos.
-                        </p>
-                        <p><b>Device Model: </b>Lenovo Legion 5 (2021)</p>
-                        <p><b>Device Software Version: </b> Windows 11 - 22H2 / Chrome 108.0.5359.125 (64-bit)</p>
-                        <p><b>Attachments: </b><br><br>
-                            <a href="../images/articles/bug-report-performance.png"><img src="../images/articles/bug-report-performance.png" class="bug-type-img" alt="Perfomance type bug"></a><br>
-                            <i>*some information is blurred due to NDA</i>  
-                        </p>
-
-                        <h5>Functional</h5>
-                        <p><b>Title: </b>Windows 10, Chrome - Search doesnt' work in "Who can see page"</p>
-                        <p><b>Bug Severity: </b>Major</p>
-                        <p><b>Bug Priority: </b>High</p>
-                        <p><b>Action Performed: </b></p>
-                        <ol>
-                            <li>Go to URL *url-is-here*</li>
-                            <li>Click on "+" near account name</li>
-                            <li>Type in search field valid name form the list of accounts</li>
-                        </ol>
-                        <p><b>Expected Result: </b>Search results should be presented after enter a valid name from the accounts list.</p>
-                        <p><b>Actual Result: </b>Search result is "no users to show" after entered valid name from the accounts list</p> 
-                        <p><b>Error Message: </b>No</p>
-                        <p><b>Additional Enviroment Info: </b><br><br>
-                            Login details: user / password<br>
-                        </p>
-                        <p><b>Device Model: </b>Laptop Lenovo 14 (2019)</p>
-                        <p><b>Device Software Version: </b> Windows 10 - Enterprise / Chrome - Version 117.0.5938.63 (Official Build) (64-bit)</p>
-                        <p><b>Attachments: </b><br><br>
-                            <a href="../images/articles/bug-report-functional.png"><img src="../images/articles/bug-report-functional.png" class="bug-type-img" alt="Functional type bug"></a><br>
-                            <i>*some information is blurred due to NDA</i>  
-                        </p>
-
-                        <h5>Visual</h5>
-                        <p><b>Title: </b>Windows 10, Chrome - Pop-up info window is displayed behind number after hover a cursor on Chart</p>
-                        <p><b>Bug Severity: </b>Minor</p>
-                        <p><b>Bug Priority: </b>Minor</p>
-                        <p><b>Action Performed: </b></p>
-                        <ol>
-                            <li>Go to URL *url-is-here*</li>
-                            <li>Scroll down to Open Opportunities section</li>
-                            <li>Hover cursor on the green Chart</li>
-                        </ol>
-                        <p><b>Expected Result: </b>When hovering mouse coursor on Chart the pop-up info window should be displayed in fornt of the number of the opened opportunities.</p>
-                        <p><b>Actual Result: </b>When hovering mouse coursor on Chart the pop-up info window is displayed behind the number of the opened opportunities</p> 
-                        <p><b>Error Message: </b>No</p>
-                        <p><b>Additional Enviroment Info: </b><br><br>
-                            Login details: user / password<br>
-                            Exact URL: *url-is-here*
-                        </p>
-                        <p><b>Device Model: </b>Laptop Lenovo 14 (2019)</p>
-                        <p><b>Device Software Version: </b> Windows 10 - Enterprise / Chrome - Version 117.0.5938.63 (Official Build) (64-bit)</p>
-                        <p><b>Attachments: </b><br><br>
-                            <a href="../images/articles/bug-report-visual.png"><img src="../images/articles/bug-report-visual.png" class="bug-type-img" alt="Visual type bug"></a><br>
-                            <i>*some information is blurred due to NDA</i>  
-                        </p>
-
-                        <h5>Content</h5>
-                        <p><b>Title: </b>Samsung Galaxy S22 5G - Registration - Confirmation text not translated to English</p>
-                        <p><b>Bug Severity: </b>Minor</p>
-                        <p><b>Bug Priority: </b>Minor</p>
-                        <p><b>Action Performed: </b></p>
-                        <ol>
-                            <li>Go to URL *url-is-here*</li>
-                            <li>In country pop-up menu select United Kingdom</li>
-                            <li>Tap on "Head" button near the main logo</li>
-                            <li>Scroll down and tap "Register" button</li>
-                            <li>Enter your e-mail and tap "Go"/"Enter" on your keyboard</li>
-                            <li>Tap on "Create an account" button</li>
-                            <li>Scroll down to the end of the registration page</li>
-                        </ol>
-                        <p><b>Expected Result: </b>Confirmation text should be in english as per website language.</p>
-                        <p><b>Actual Result: </b>Confirmation text is on Italian</p> 
-                        <p><b>Error Message: </b>No</p>
-                        <p><b>Additional Enviroment Info: </b><br><br>
-                            Location and language: US/English.<br>
-                            Website language: GB/English
-                        </p>
-                        <p><b>Device Model: </b>Samsung Galaxy S22 5G</p>
-                        <p><b>Device Software Version: </b> Android 13 / Chrome - Version 117.0.5938.63 (Official Build) (64-bit)</p>
-                        <p><b>Attachments: </b><br><br>
-                            <a href="../images/articles/bug-report-content.jpg"><img src="../images/articles/bug-report-content.jpg" class="bug-type-img" alt="Content type bug"></a><br>
-                            <i>*some information is blurred due to NDA</i>  
-                        </p>
-
-                    </article>
-
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="links_used">Links used</h4>
                         <ol>
                         <li><a href="https://istqb-glossary.page/test-case/">ISTQB Glossary - Bug Report<i class="fa fa-external-link" aria-hidden="true"></i></a></li>
                         <li><a href="https://www.guru99.com/how-to-write-a-bug-report.html/">How to Write A Bug Report with Examples<i class="fa fa-external-link" aria-hidden="true"></i></a></li>
                         </ol>            
-                    </article>
+                    </section>
 
-                </section>
+                </div>
 
             </main>
 
@@ -375,7 +241,6 @@
                     <li><a href="#why_do_we_need_a_bug_report" rel="why_do_we_need_a_bug_report">Why Do We Need A Bug Report?</a></li>
                     <li><a href="#how_to_write_bug_report" rel="how_to_write_bug_report">How to Write Bug Report</a></li>
                     <li><a href="#example_of_bug_report" rel="example_of_bug_report">Example of Bug Report</a></li>
-                    <li><a href="#my_bug_examples_by_type" rel="my_bug_examples_by_type">My Bug Examples By Type</a></li>
                     <li><a href="#links_used" rel="links_used">Links Used</a></li>
                 </ul>
             </aside>
