--- a/projects/test-strategy.html
+++ b/projects/test-strategy.html
@@ -76,12 +76,11 @@
         <div class="main-wrapper">
             <!--main-section-->
             <main class="main-section">
-                <section class="main-section-item">
-                    <div class="meta">
-                        <h3>Test Strategy</h3>
-                    </div>
+                <!--main-section-item-->
+                <div class="main-section-item">
+                    <h3>Test Strategy</h3>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="test_strategy_definition">Test Strategy Definition</h4>
                         <p>By ISTQB glossary the definition of a test strategy is – a high-level description of the test
                             levels to be performed
@@ -93,9 +92,9 @@
                             mitigate those risks, rather than ticking boxes to show that all types of testing have been
                             included.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="types_of_test_strategies">Types of test strategies</h4>
                         <ol>
                             <li>Analytical strategy</li>
@@ -106,9 +105,9 @@
                             <li>Consultative strategy</li>
                             <li>Regression averse strategy</li>
                         </ol>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h5>1. Analytical strategy</h5>
                         <p>An analytical test strategy is the most common strategy, it might be based on requirements
                             (in user acceptance
@@ -131,9 +130,9 @@
                             passed, those that were
                             tested but failed and those requirements which are not fully tested, etc.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h5>2. Model based strategy</h5>
                         <p>An increasingly popular strategy is a model-based test strategy. This combines
                             specification-based testing with
@@ -152,9 +151,9 @@
                             The models are also developed according to existing software, hardware, data speeds,
                             infrastructure, etc.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h5>3. Methodical Test Strategies</h5>
                         <p>A methodical test strategy is when you use a standard test basis for different applications.
                         </p>
@@ -166,9 +165,9 @@
                             maintenance testing, a checklist describing important functions, their attributes, etc. is
                             sufficient to perform the tests.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h5>4. Standards or process compliant strategy</h5>
                         <p>Standards compliant test strategies are where you use industry standards to decide what to
                             test.
@@ -187,9 +186,9 @@
                             etc. around each
                             user stories.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h5>5. Reactive Test Strategies</h5>
                         <p>Reactive test strategies are where you decide what to test when you receive the software.
                             This can happen in
@@ -202,9 +201,9 @@
                             reactive as one test
                             depends on the next.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h5>6. Consultative strategy</h5>
                         <p>The name suggests, this testing technique uses consultations from key stakeholders as input
                             to decide the scope
@@ -221,9 +220,9 @@
                             partitioning techniques
                             depending upon priority of the items in the provided lists.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h5>7. Regression averse strategy</h5>
                         <p>A regression-averse strategy is one where you just make sure nothing has broken since the
                             last release and ignore
@@ -231,9 +230,9 @@
                             product parts. For
                             example an infrastructure replacement where nothing is expected to change.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="test_strategy_in_sdlc">Test Strategy in SDLC</h4>
                         <p>A regression-averse strategy is one where you just make sure nothing has broken since the
                             last release and ignore
@@ -256,9 +255,9 @@
                             <li>Configuration and change management</li>
                             <li>Test environment requirements</li>
                         </ol>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="sample_test_strategy_document">Sample Test Strategy Document</h4>
                         <h5>1. Scope</h5>
                         <p>The testing will be performed on the web application which includes the following
@@ -275,9 +274,9 @@
                             <li>Configuration and change management</li>
                             <li>Test environment requirements</li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h5>2. Test Approach</h5>
                         <p>The testing approach for the web application will include the following steps:
                         </p>
@@ -294,9 +293,9 @@
                         <p><strong>Test reporting:</strong> The testing team will prepare and share test reports that
                             summarize the testing
                             progress, the number of defects, and the overall quality of the application.</p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h5>3. Testing Types</h5>
                         <p>The following testing types will be performed during the testing of the web application:
                         </p>
@@ -318,9 +317,9 @@
                         <p><strong>Compatibility testing: </strong> This type of testing checks if the application
                             functions
                             correctly across different browsers, devices, and operating systems.</p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h5>4. Testing Tools</h5>
                         <p>There are several important tools used in almost every testing project:
                         </p>
@@ -337,9 +336,9 @@
                             <li>Usability testing tools</li>
                             <li>Visual testing tools</li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h5>5. Hardware - Software Configuration</h5>
                         <p>The testing will be conducted on the web application across the following hardware and
                             software
@@ -350,9 +349,9 @@
                             <b>Browsers: </b>Chrome, Firefox, Safari<br>
                             <b>Database systems: </b>MySQL, Oracle, SQL Server
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h5>6. Reporting</h5>
                         <p>The testing team will prepare and provide the following reports for the web application.
                         </p>
@@ -395,9 +394,9 @@
                             <li>Types of testing performed</li>
                             <li>Gaps or areas requiring additional testing</li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="test_strategy_vs_test_plan">Test Strategy vs Test Plan</h4>
                         <table>
                             <tr>
@@ -442,9 +441,9 @@
                                 <td>Evolves throughout the testing process, incorporating feedback and adjustments</td>
                             </tr>
                         </table>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="conclusion">Conclusion</h4>
                         <p>In Software Engineering, software release goes through Test Strategy documents from time to
                             time to map the progress
@@ -454,9 +453,9 @@
                             help for release without
                             any potential risk.
                         </p>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="links_used">Links used</h4>
                         <ol>
                             <li><a href="https://www.guru99.com/how-to-create-test-strategy-document.html">How to create
@@ -473,9 +472,9 @@
                             <li><a href="https://www.wearedragonfly.co/news/7-types-of-test-strategy">Seven types of
                                     test strategy<i class="fa fa-external-link" aria-hidden="true"></i></a></li>
                         </ol>
-                    </article>
+                    </section>
 
-                </section>
+                </div>
 
             </main>
 
