--- a/projects.html
+++ b/projects.html
@@ -113,6 +113,11 @@
                     <section class="article-section">
                         <h4>Examples</h4>
                         <ul>
+                            <li><a href="../ivan-qa/projects/test-scenario-based-on-user-story.html">
+                                Test Scenario Based On User Story
+                            </a>
+                            </li>
+
                             <li><a href="../ivan-qa/projects/my-bug-reports.html">
                                 My Bug Reports
                             </a>
