--- a/projects/my-bug-reports.html
+++ b/projects/my-bug-reports.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Ivan Gavrikov &#8211; Projects &#8211; Bug Report</title>
+    <title>Ivan Gavrikov &#8211; Projects &#8211; My Bug Reports</title>
     <!--Meta-->
     <meta charset=utf-8>
     <link rel="apple-touch-icon" sizes="180x180" href="../../ivan-qa/favicon-apple-180x180.png">
@@ -69,7 +69,7 @@
                 <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
                 <li><a href="../../ivan-qa/projects.html">Projects</a></li>
                 <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
-                <li>Bug Report</li>
+                <li>My Bug Reports</li>
             </ul>
         </nav>
         <!--main-wrapper-->
