--- a/projects.html
+++ b/projects.html
@@ -123,8 +123,8 @@
                             </a>
                             </li>
 
-                            <li><a href="#">
-                                    API
+                            <li><a href="../ivan-qa/projects/restful-booker-API-testing-with-postman.html">
+                                Restful Booker API Testing with Postman
                                 </a>
                             </li>
                             <li><a href="#">
@@ -250,6 +250,12 @@
                                         class="fa fa-external-link" aria-hidden="true"></i>
                                 </a>
                             </li>
+
+                            <li><a href="https://www.sisense.com/blog/rest-api-testing-strategy-what-exactly-should-you-test/">
+                                REST API Testing Strategy: What Exactly Should You Test?<i
+                                    class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li>
 
                             <li><a href="https://github.com/DannyDainton">
                                     GitHub - DannyDainton - Senior SDET<i class="fa fa-external-link"
