--- a/projects.html
+++ b/projects.html
@@ -127,8 +127,19 @@
                                 Restful Booker API Testing with Postman
                                 </a>
                             </li>
-                            <li><a href="#">
-                                    Cypress
+
+                            <li><a href="../ivan-qa/projects/automation-testing-with-selenium-ide.html">
+                                Automation testing with Selenium IDE
+                                </a>
+                            </li>
+
+                            <li><a href="../ivan-qa/projects/automation-testing-with-cypress.html">
+                                Automation testing with Cypress
+                                </a>
+                            </li>
+
+                            <li><a href="../ivan-qa/projects/jenkins-usage.html">
+                                Jenkins usage
                                 </a>
                             </li>
                         </ul>
