Closed #42 and minor Tools + Vendors editing

--- a/projects.html
+++ b/projects.html
@@ -148,9 +148,14 @@
                     <section class="article-section">
                         <h4>Tools</h4>
                         <ul>
+                            <li><a href="../ivan-qa/projects/web-browser-extensions.html">
+                                Browser Extensions list
+                            </a> - my list of the useful web browser extensions
+                            </li>
+
                             <li><a href="../ivan-qa/projects/nu-HTML-checker.html">
                                     Nu HTML Checker
-                                </a> - an article how to check your website for issues with HTML tags
+                                </a> - how to check your website for issues with HTML tags
                             </li>
                             <li><a href="https://xenus-link-sleuth.en.softonic.com/">
                                     Xenu’s Link Sleuth<i class="fa fa-external-link" aria-hidden="true"></i>
@@ -158,7 +163,7 @@
                             </li>
                             <li><a href="https://openvas.org/">
                                     OpenVAS<i class="fa fa-external-link" aria-hidden="true"></i>
-                                </a> - is a full-featured vulnerability scanner
+                                </a> - full-featured vulnerability scanner
                             </li>
                         </ul>
                     </section>
