--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
                     <section class="about-section">
                         <h2 class="hello-title">Hello</h2>
                         <h3>About me</h3>
-                        <p>ISTQB certified Quality Assurance specialist with 3+ years of experience in Quality Assurance
-                            and
-                            test
-                            automation.<br>
+                        <p>ISTQB certified Quality Assurance specialist with 3 years of experience in manual and
+                            automation testing.
+                            <br>
                             Telecommunications specialist with 10+ years of experience in engineering, project controls
                             and
                             management.
@@ -200,8 +199,8 @@
                                 <td colspan="2"><img src="../ivan-qa/images/icons/logo-network-tab.png"
                                         alt="Network Tab (DevTools) logo">Browser DevTools (Network)</td>
                                 <td><a href="https://developer.chrome.com/docs/lighthouse/overview/"><img
-                                        src="../ivan-qa/images/icons/logo-lighthouse.png"
-                                        alt="Lighthouse logo">Lighthouse</a></td>
+                                            src="../ivan-qa/images/icons/logo-lighthouse.png"
+                                            alt="Lighthouse logo">Lighthouse</a></td>
                             </tr>
 
                             <tr>
@@ -235,8 +234,7 @@
                             <tr>
                                 <td>Databases</td>
                                 <td><a href="https://en.wikipedia.org/wiki/SQL"><img
-                                    src="../ivan-qa/images/icons/logo-sql.png"
-                                    alt="SQL logo">SQL</a></td>
+                                            src="../ivan-qa/images/icons/logo-sql.png" alt="SQL logo">SQL</a></td>
                                 <td colspan="3"><a href="https://www.phpmyadmin.net/"><img
                                             src="../ivan-qa/images/icons/logo-php-my-admin.png"
                                             alt="phpMyAdmin logo">phpMyAdmin</a></td>
@@ -258,7 +256,8 @@
                             <tr>
                                 <td>Extensions</td>
                                 <td colspan="4"><a href="../ivan-qa/projects/web-browser-extensions.html"><img
-                                            src="../ivan-qa/images/icons/logo-extensions.png" alt="Web Browser Extensions logo">Web Browser Extensions</a></td>
+                                            src="../ivan-qa/images/icons/logo-extensions.png"
+                                            alt="Web Browser Extensions logo">Web Browser Extensions</a></td>
                             </tr>
 
                             <tr>
