--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
             <main class="main-section">
                 <div class="main-section-item">
                     <div class="meta">
-                        <h3 id="my_test_activity"><i class="fa fa-suitcase" aria-hidden="true"></i>My QA Activity
+                        <h3 id="my_qa_activity"><i class="fa fa-suitcase" aria-hidden="true"></i>My QA Activity
                         </h3>
                         <p>This section is related to the common aspects, technologies and other activities in Quality
                             Assurance I use daily.</p>
@@ -113,35 +113,39 @@
                     <section class="article-section">
                         <h4>Examples</h4>
                         <ul>
-                            <li><a href="../ivan-qa/projects/test-scenario-based-on-user-story.html">
+                            <li><a id="test_scenario_based_on_user_story" href="../ivan-qa/projects/test-scenario-based-on-user-story.html">
                                 Test Scenario Based On User Story
                             </a>
                             </li>
 
-                            <li><a href="../ivan-qa/projects/my-bug-reports.html">
+                            <li><a id="my_bug_reports" href="../ivan-qa/projects/my-bug-reports.html">
                                 My Bug Reports
                             </a>
                             </li>
 
-                            <li><a href="../ivan-qa/projects/restful-booker-API-testing-with-postman.html">
+                            <li><a id="restful_booker_api_testing_with_postman" href="../ivan-qa/projects/restful-booker-API-testing-with-postman.html">
                                 Restful Booker API Testing with Postman
                                 </a>
                             </li>
 
-                            <li><a href="../ivan-qa/projects/automation-testing-with-selenium-ide.html">
+                            <li><a id="automiation_testing_with_selenium_ide" href="../ivan-qa/projects/automation-testing-with-selenium-ide.html">
                                 Automation testing with Selenium IDE
                                 </a>
                             </li>
 
-                            <li><a href="../ivan-qa/projects/automation-testing-with-cypress.html">
+                            <li><a id="automiation_testing_with_cypress" href="../ivan-qa/projects/automation-testing-with-cypress.html">
                                 Automation testing with Cypress
                                 </a>
                             </li>
 
-                            <li><a href="../ivan-qa/projects/jenkins-usage.html">
-                                Jenkins usage
+                            <li><a id="jenkins_usage" href="../ivan-qa/projects/jenkins-usage.html">
+                                Jenkins Usage
                                 </a>
                             </li>
+
+                            <li><a id="simple_calculator" href="../ivan-qa/projects/calculator.html">Simple Calculator
+                                written on JavaScript</a></li>
+
                         </ul>
                     </section>
 
@@ -149,7 +153,7 @@
                         <h4>Tools</h4>
                         <ul>
                             <li><a href="../ivan-qa/projects/web-browser-extensions.html">
-                                Browser Extensions list
+                                Browser Extensions
                             </a> - my list of the useful web browser extensions
                             </li>
 
@@ -168,13 +172,6 @@
                         </ul>
                     </section>
 
-                    <section class="article-section">
-                        <h4 id="simple_calculator"><i class="fa fa-calculator" aria-hidden="true"></i>Simple
-                            Calculator</h4>
-                        <p><a href="../ivan-qa/projects/calculator.html">There is an example of my simple calculator
-                                written on JavaScript.</a>
-                        </p>
-                    </section>
                 </div>
 
                 <div class="main-section-item">
@@ -365,7 +362,13 @@
                 <h3>Navigation</h3>
 
                 <ul class="side-section-nav">
-                    <li><a href="#my_test_activity" rel="my_test_activity">My QA Activity</a></li>
+                    <li><a href="#my_qa_activity" rel="my_qa_activity">My QA Activity</a></li>
+                    <li><a href="#test_scenario_based_on_user_story" rel="test_scenario_based_on_user_story">Test Scenario Based On User Story</a></li>
+                    <li><a href="#my_bug_reports" rel="my_bug_reports">My Bug Reports</a></li>
+                    <li><a href="#restful_booker_api_testing_with_postman" rel="restful_booker_api_testing_with_postman">Restful Booker API Testing with Postman</a></li>
+                    <li><a href="#automiation_testing_with_selenium_ide" rel="automiation_testing_with_selenium_ide">Automation testing with Selenium IDE</a></li>
+                    <li><a href="#automiation_testing_with_cypress" rel="automiation_testing_with_cypress">Automation testing with Cypress</a></li>
+                    <li><a href="#jenkins_usage" rel="jenkins_usage">Jenkins usage</a></li>
                     <li><a href="#simple_calculator" rel="simple_calculator">Simple Calculator</a></li>
                     <li><a href="#useful_qa_articles" rel="useful_qa_articles">Useful QA Articles</a></li>
                 </ul>
