--- a/projects/automation-testing-with-selenium-ide.html
+++ b/projects/automation-testing-with-selenium-ide.html
@@ -152,8 +152,33 @@
                             <li>Export test script.</li>
                         </ol>
 
-                        <p><a href="../docs/">
-                                You can check my Selenium IDE test script examples here<i class="fa fa-external-link"
+                        <h5>Let's get started</h5>
+
+                        <p>At first, we should chose what tests must be automated. For example, I've created basic test scenarios to test the famous american e-commerce website.<br>
+                        I know, testing on production with black-box technique sounds wierd and very time consuming, but I just want to show you how can we use Selenium IDE to automate routine actions.<br></p>
+                        <p>Here is an example of our test scripts which can be sorted with status "Automated". It means I already automated them in our Selenium IDE. <a href="https://docs.google.com/spreadsheets/d/1dwDLQuYdJdSPEiOm2Ugmd7tS5NBrq8pJ/edit#gid=1161463302">Link on the sheet is here.<i class="fa fa-external-link" aria-hidden="true"></i></a>
+                        </p>
+                        <img src="../images/articles/selenium-ide-test-scenarios-excel-sheet.png" alt="Selenium IDE test scenarios excel sheet examples">
+
+                        <h5>Starting GUI test scripts</h5>
+                        <p>I will not describe the whole process, just check the video how we can start some tests from GUI</p>
+                        <video controls>
+                            <source src="../images/articles/selenium-ide-gui-test-start.mp4" type="video/mp4">
+                          Your browser does not support the video tag.
+                        </video>
+
+                        <h5>Starting CLI test scripts</h5>
+                        <p>We can also use Selenium CLI to start our tests and test suits by using command line. We can specify default configuration not to remember all of the command-line arguments. <br> Just create <b>.side.yml</b> configuration file and use it inside our CLI.</p>
+                        <img src="../images/articles/selenium-ide-yaml-example.png" alt="Selenium IDE yaml configuration example">
+                        
+                        <p>And video of running the test from CLI</p>
+                        <video controls>
+                            <source src="../images/articles/selenium-ide-cli-test-start.mp4" type="video/mp4">
+                          Your browser does not support the video tag.
+                        </video>
+
+                        <p><a href="https://drive.google.com/file/d/19PlpOyBtHbw5-VAarDZWRcDLo8jOpOGA/view?usp=share_link">
+                                You can find my Selenium IDE test scripts examples here<i class="fa fa-external-link"
                                     aria-hidden="true"></i></a></p>
 
                     </section>
@@ -165,6 +190,8 @@
                                     Selenium IDE<i class="fa fa-external-link" aria-hidden="true"></i></a></li>
                             <li><a href="https://www.selenium.dev/selenium-ide/">Selenium IDE - Open source record and
                                     playback test automation for the web<i class="fa fa-external-link"
+                                        aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.selenium.dev/selenium-ide/docs/en/introduction/getting-started">Selenium IDE - Getting Started<i class="fa fa-external-link"
                                         aria-hidden="true"></i></a></li>
                         </ol>
                     </section>
