--- a/resume.html
+++ b/resume.html
@@ -279,7 +279,6 @@
                             </p>
                             <ul class="job-info-list">
                                 <li>prepared design project documentation for:</li>
-                                <li>
                                     <ul>
                                         <li>- construction of fiber optic cable lines (FOCL) using FTTH/GPON technology
                                             in
@@ -291,7 +290,7 @@
                                         <li>- construction of transport interchange hubs using GPON technology;</li>
                                         <li>- construction of the Intelligent Traffic System (ITS) in Moscow;</li>
                                     </ul>
-                                </li>
+                                
                                 <li>calculated the quantities from design project documentation and checked the cost
                                     estimates;</li>
                                 <li>interacted with contractors;</li>
@@ -408,7 +407,9 @@
                         <li>Communication</li>
                         <li>Analytical Thinking</li>
                         <li>Time Management</li>
-                        <li>Flexible Worker</li>
+                        <li>Flexibility</li>
+                        <li>Problem Solving</li>
+                        <li>Critical thinking</li>
                     </ul>
                 </div>
                 <!--section-->
@@ -419,7 +420,7 @@
                         <li>CSS3</li>
                         <li>JavaScript</li>
                         <li>SQL</li>
-                        <li>Cypress</li>
+                        <li>Selenium IDE</li>
                         <li>Charles Proxy</li>
                         <li>Postman</li>
                         <li>Fiddler</li>
