Minor changes to upload the project
Checked All pages for errors in NuChecker
Minor style changes
Edited articles

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <main class="main-section">
                 <div class="main-section-item">
                     <!--avatar-->
-                    <section class="avatar">
-                        <img src="../ivan-qa/images/avatar.jpg" alt="Avatar of Ivan Gavrikov">
-                    </section>
+                    <div class="avatar">
+                        <img src="../ivan-qa/images/avatar.jpg" alt="Photo Ivan Gavrikov">
+                    </div>
 
                     <!--about-section-->
                     <section class="about-section">
@@ -99,7 +99,7 @@
                         </ul>
                     </section>
                     <!--link-section-->
-                    <section class="link-section">
+                    <div class="link-section">
                         <a href="../ivan-qa/resume.html">
                             <div class="project-links">Resume</div>
                         </a>
@@ -109,7 +109,7 @@
                         <a href="https://github.com/g1f">
                             <div class="project-links">GitHub</div>
                         </a>
-                    </section>
+                    </div>
                 </div>
 
                 <div class="main-section-item">
@@ -147,11 +147,11 @@
                                             src="../ivan-qa/images/icons/logo-test-rail.png"
                                             alt="testrail logo">TestRail</a></td>
                                 <td><a href="https://zephyrdocs.atlassian.net/wiki/spaces/ALLDOCS/overview?mode=global"><img
-                                            src="../ivan-qa/images/icons/logo-zephyr.png" alt="zephyr logo">Zephyr</a>
+                                            src="../ivan-qa/images/icons/logo-zephyr.png" alt="Zephyr logo">Zephyr</a>
                                 </td>
                                 <td colspan="2"><a
                                         href="https://www.tricentis.com/products/unified-test-management-qtest"><img
-                                            src="../ivan-qa/images/icons/logo-qtest.png" alt="zephyr logo">qTest</a>
+                                            src="../ivan-qa/images/icons/logo-qtest.png" alt="qTest logo">qTest</a>
                                 </td>
                             </tr>
 
@@ -205,12 +205,9 @@
 
                             <tr>
                                 <td>Regression Automation</td>
-                                <td><a href="https://www.selenium.dev/selenium-ide/"><img
+                                <td colspan="4"><a href="https://www.selenium.dev/selenium-ide/"><img
                                             src="../ivan-qa/images/icons/logo-selenium-ide.png"
                                             alt="Selenium IDE logo">Selenium IDE</a></td>
-                                <td colspan="3"><a href="https://www.cypress.io/"><img
-                                            src="../ivan-qa/images/icons/logo-cypress.png"
-                                            alt="Cypress logo">Cypress</a></td>
                             </tr>
 
                             <tr>
