--- a/projects.html
+++ b/projects.html
@@ -128,8 +128,8 @@
                                 </a>
                             </li>
 
-                            <li><a id="automiation_testing_with_selenium_ide" href="../ivan-qa/projects/automation-testing-with-selenium-ide.html">
-                                Automation testing with Selenium IDE
+                            <li><a id="gui_automiation_testing_with_selenium_ide" href="../ivan-qa/projects/automation-testing-with-selenium-ide.html">
+                                GUI automation testing with Selenium IDE
                                 </a>
                             </li>
 
@@ -268,7 +268,13 @@
                                 REST API Testing Strategy: What Exactly Should You Test?<i
                                     class="fa fa-external-link" aria-hidden="true"></i>
                             </a>
-                        </li>
+                            </li>
+
+                            <li><a href="https://smartbear.com/learn/api-testing/what-is-api-testing/">
+                                Smartbear - What is API Testing?<i
+                                    class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                            </li>
 
                             <li><a href="https://github.com/DannyDainton">
                                     GitHub - DannyDainton - Senior SDET<i class="fa fa-external-link"
@@ -366,7 +372,7 @@
                     <li><a href="#test_scenario_based_on_user_story" rel="test_scenario_based_on_user_story">Test Scenario Based On User Story</a></li>
                     <li><a href="#my_bug_reports" rel="my_bug_reports">My Bug Reports</a></li>
                     <li><a href="#restful_booker_api_testing_with_postman" rel="restful_booker_api_testing_with_postman">Restful Booker API Testing with Postman</a></li>
-                    <li><a href="#automiation_testing_with_selenium_ide" rel="automiation_testing_with_selenium_ide">Automation testing with Selenium IDE</a></li>
+                    <li><a href="#gui-automiation_testing_with_selenium_ide" rel="gui-automiation_testing_with_selenium_ide">GUI automation testing with Selenium IDE</a></li>
                     <li><a href="#automiation_testing_with_cypress" rel="automiation_testing_with_cypress">Automation testing with Cypress</a></li>
                     <li><a href="#jenkins_usage" rel="jenkins_usage">Jenkins usage</a></li>
                     <li><a href="#simple_calculator" rel="simple_calculator">Simple Calculator</a></li>
