--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
                     class="btn-simple" rel="external">Resume in PDF</a>
             </div>
             <a href="index.html"><img class="avatar" src="../ivan-qa/images/avatar.jpg" width="180"
-                    alt="Avatar of Ivan Gavrikov"></a>
+                    alt="Photo Ivan Gavrikov"></a>
         </header>
         <!--main-wrapper-->
         <div class="main-wrapper">
@@ -278,19 +278,17 @@
                                 The company specialized in construction of cable communication lines.
                             </p>
                             <ul class="job-info-list">
-                                <li>prepared design project documentation for:</li>
-                                    <ul>
-                                        <li>- construction of fiber optic cable lines (FOCL) using FTTH/GPON technology
-                                            in
-                                            Moscow
-                                            and Moscow region;</li>
-                                        <li>- tie-ins and reconfiguration of current cable lines for Orange Business
-                                            Services
-                                            (French telecommunication company);</li>
-                                        <li>- construction of transport interchange hubs using GPON technology;</li>
-                                        <li>- construction of the Intelligent Traffic System (ITS) in Moscow;</li>
-                                    </ul>
-                                
+                                <li>prepared design project documentation for:<br>
+                                    - construction of fiber optic cable lines (FOCL) using FTTH/GPON technology
+                                    in
+                                    Moscow
+                                    and Moscow region;<br>
+                                    - tie-ins and reconfiguration of current cable lines for Orange Business
+                                    Services
+                                    (French telecommunication company);<br>
+                                    - construction of transport interchange hubs using GPON technology;<br>
+                                    - construction of the Intelligent Traffic System (ITS) in Moscow;
+                                </li>
                                 <li>calculated the quantities from design project documentation and checked the cost
                                     estimates;</li>
                                 <li>interacted with contractors;</li>
@@ -345,6 +343,39 @@
                 <h2><i class="fa fa-book" aria-hidden="true"></i>Courses</h2>
                 <div class="main-section-item">
                     <section>
+                        <div class="meta">
+                            <h3 class="job-title">Test Automation University</h3>
+                            <div class="date">Issued October 2023</div>
+                            <a class="edu-link"
+                                href="https://drive.google.com/file/d/1G6OtqRYo-p_aRPPXEXWlAcZpOlmmTCc6/view?usp=sharing"
+                                rel="external">
+                                Continious Integration with Jenkins</a>
+                        </div>
+                    </section>
+
+                    <section>
+                        <div class="meta">
+                            <h3 class="job-title">Test Automation University</h3>
+                            <div class="date">Issued September 2023</div>
+                            <a class="edu-link"
+                                href="https://drive.google.com/file/d/1S9KB7p4DgC-mwoUoRRCBbyzGhyOMCtOP/view?usp=sharing"
+                                rel="external">
+                                Codeless Test Automation with Selenium IDE</a>
+                        </div>
+                    </section>
+
+                    <section>
+                        <div class="meta">
+                            <h3 class="job-title">Test Automation University</h3>
+                            <div class="date">Issued September 2023</div>
+                            <a class="edu-link"
+                                href="https://drive.google.com/file/d/1XSL2vkjwoLI1UeKEybgQ_zM5T1DKoUFL/view?usp=sharing"
+                                rel="external">
+                                Exploring Service APIs through Test Automation</a>
+                        </div>
+                    </section>
+
+                    <section>
                         <!--course-->
                         <div class="meta">
                             <h3 class="job-title">Udemy</h3>
@@ -355,6 +386,7 @@
                                 ISTQB Foundation Level 2022 Complete Training</a>
                         </div>
                     </section>
+
                     <section>
                         <!--course-->
                         <div class="meta">
@@ -366,6 +398,7 @@
                                 Atlassian Jira</a>
                         </div>
                     </section>
+
                     <section>
                         <div class="meta">
                             <h3 class="job-title">Coursera</h3>
@@ -376,6 +409,7 @@
                                 Introdution to User Experience Design</a>
                         </div>
                     </section>
+
                 </div>
             </main>
             <!--side-section-->
@@ -405,32 +439,40 @@
                     <ul class="side-skill-list">
                         <li>Teamwork</li>
                         <li>Communication</li>
-                        <li>Analytical Thinking</li>
-                        <li>Time Management</li>
-                        <li>Flexibility</li>
                         <li>Problem Solving</li>
-                        <li>Critical thinking</li>
+                        <li>Analytical & Critical Thinking</li>
+                        <li>Flexible</li>
+                        <li>Time Management</li>
                     </ul>
                 </div>
                 <!--section-->
                 <div class="side-section-item">
                     <h2><i class="fa fa-desktop" aria-hidden="true"></i>Hard Skills</h2>
                     <ul class="side-skill-list">
+                        <li>Atlassian JIRA</li>
+                        <li>TestRail</li>
+                        <li>qTest</li>
                         <li>HTML5</li>
                         <li>CSS3</li>
                         <li>JavaScript</li>
                         <li>SQL</li>
-                        <li>Selenium IDE</li>
-                        <li>Charles Proxy</li>
+                        <li>GIT</li>
                         <li>Postman</li>
                         <li>Fiddler</li>
-                        <li>Browser Console</li>
-                        <li>Android SDK Tools</li>
+                        <li>Charles Proxy</li>
+                        <li>Selenium IDE</li>
+                        <li>Jenkins</li>
+                        <li>Jmeter</li>
                         <li>Android Studio</li>
-                        <li>GitHub</li>
-                        <li>Atlassian Jira</li>
-                        <li>TestRails</li>
-                        <li>Microsoft Office Suite</li>
+                        <li>Android SDK Tools</li>
+                        <li>TestFlight</li>
+                        <li>Browser DevTools</li>
+                        <li>Lighthouse</li>
+                        <li>Axe</li>
+                        <li>WAVE</li>
+                        <li>Microsoft Office</li>
+                        <li>Slack</li>
+                        <li>Zoom</li>
                     </ul>
                 </div>
             </aside>
