Minor bug fixes and GUI improvements

--- a/projects.html
+++ b/projects.html
@@ -128,15 +128,16 @@
                                 </a>
                             </li>
 
-                            <li><a id="gui_automiation_testing_with_selenium_ide" href="../ivan-qa/projects/automation-testing-with-selenium-ide.html">
+                            <li><a id="gui_automiation_testing_with_selenium_ide" href="../ivan-qa/projects/gui-automation-testing-with-selenium-ide.html">
                                 GUI automation testing with Selenium IDE
                                 </a>
                             </li>
 
+                            <!--
                             <li><a id="automiation_testing_with_cypress" href="../ivan-qa/projects/automation-testing-with-cypress.html">
                                 Automation testing with Cypress
                                 </a>
-                            </li>
+                            </li>-->
 
                             <li><a id="jenkins_usage" href="../ivan-qa/projects/jenkins-usage.html">
                                 Jenkins Usage
@@ -373,7 +374,7 @@
                     <li><a href="#my_bug_reports" rel="my_bug_reports">My Bug Reports</a></li>
                     <li><a href="#restful_booker_api_testing_with_postman" rel="restful_booker_api_testing_with_postman">Restful Booker API Testing with Postman</a></li>
                     <li><a href="#gui-automiation_testing_with_selenium_ide" rel="gui-automiation_testing_with_selenium_ide">GUI automation testing with Selenium IDE</a></li>
-                    <li><a href="#automiation_testing_with_cypress" rel="automiation_testing_with_cypress">Automation testing with Cypress</a></li>
+                    <!--<li><a href="#automiation_testing_with_cypress" rel="automiation_testing_with_cypress">Automation testing with Cypress</a></li>-->
                     <li><a href="#jenkins_usage" rel="jenkins_usage">Jenkins usage</a></li>
                     <li><a href="#simple_calculator" rel="simple_calculator">Simple Calculator</a></li>
                     <li><a href="#useful_qa_articles" rel="useful_qa_articles">Useful QA Articles</a></li>
