--- a/resume.html
+++ b/resume.html
@@ -335,7 +335,7 @@
                             <span>Certified Tester, Foundation Level</span><br>
                             <a class="edu-link"
                                 href="https://atsqa.org/certified-testers/profile/3b520564c334430d8180bfbdf45a9f30">Credential
-                                ID 23-CTFL-00766-USA</a>
+                                ID 23-CTFL-00766-USA<i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </div>
                     </section>
                 </div>
@@ -347,9 +347,9 @@
                             <h3 class="job-title">Test Automation University</h3>
                             <div class="date">Issued October 2023</div>
                             <a class="edu-link"
-                                href="https://drive.google.com/file/d/1G6OtqRYo-p_aRPPXEXWlAcZpOlmmTCc6/view?usp=sharing"
+                                href="https://drive.google.com/file/d/1CkX5663JitqozrHIpwBnaW5SVjDa_GMd/view?usp=sharing"
                                 rel="external">
-                                Continious Integration with Jenkins</a>
+                                Continious Integration with Jenkins<i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </div>
                     </section>
 
@@ -358,9 +358,9 @@
                             <h3 class="job-title">Test Automation University</h3>
                             <div class="date">Issued September 2023</div>
                             <a class="edu-link"
-                                href="https://drive.google.com/file/d/1S9KB7p4DgC-mwoUoRRCBbyzGhyOMCtOP/view?usp=sharing"
+                                href="https://drive.google.com/file/d/1CkX5663JitqozrHIpwBnaW5SVjDa_GMd/view?usp=sharing"
                                 rel="external">
-                                Codeless Test Automation with Selenium IDE</a>
+                                Codeless Test Automation with Selenium IDE<i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </div>
                     </section>
 
@@ -369,9 +369,9 @@
                             <h3 class="job-title">Test Automation University</h3>
                             <div class="date">Issued September 2023</div>
                             <a class="edu-link"
-                                href="https://drive.google.com/file/d/1XSL2vkjwoLI1UeKEybgQ_zM5T1DKoUFL/view?usp=sharing"
+                                href="https://drive.google.com/file/d/1G5Atd2STiWa3xaCOzQqoYMbYU17P6Gg2/view?usp=sharing"
                                 rel="external">
-                                Exploring Service APIs through Test Automation</a>
+                                Exploring Service APIs through Test Automation<i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </div>
                     </section>
 
@@ -383,7 +383,7 @@
                             <a class="edu-link"
                                 href="https://udemy-certificate.s3.amazonaws.com/image/UC-9a870c08-70a1-40cb-ad1f-8a633e09f4ec.jpg?v=1664399788000"
                                 rel="external">
-                                ISTQB Foundation Level 2022 Complete Training</a>
+                                ISTQB Foundation Level 2022 Complete Training<i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </div>
                     </section>
 
@@ -393,9 +393,9 @@
                             <h3 class="job-title">Coursera</h3>
                             <div class="date">Issued June 2022</div>
                             <a class="edu-link"
-                                href="https://drive.google.com/file/d/1FEw7gt9UCG9SbDLNrx5JTaYHEABX4SDq/view?usp=sharing"
+                                href="https://drive.google.com/file/d/19HnsMlcSIMvDKXBKJ8PTTCa8kSba30T_/view?usp=sharing"
                                 rel="external">
-                                Atlassian Jira</a>
+                                Atlassian Jira<i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </div>
                     </section>
 
@@ -404,9 +404,9 @@
                             <h3 class="job-title">Coursera</h3>
                             <div class="date">Issued May 2022</div>
                             <a class="edu-link"
-                                href="https://drive.google.com/file/d/1DeEdkewy_R1OeQbcyeJcJwiS-ovyLsH_/view?usp=sharing"
+                                href="https://drive.google.com/file/d/1YSw7_WfbXzv_L4Ys9vo_4Ydt7-KHHaCb/view?usp=sharing"
                                 rel="external">
-                                Introdution to User Experience Design</a>
+                                Introdution to User Experience Design<i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </div>
                     </section>
 
